--- a/dev/assets/scss/_utilities.scss
+++ b/dev/assets/scss/_utilities.scss
@@ -1,11 +1,11 @@
 @use 'sass:meta';
 
 @forward 'config';
-@use 'koi';
+@use 'umbra';
 
-// @include koi.utilities();
+// @include umbra.utilities();
 
 // Alternatively We can include the utilities directly or use the pre-built CSS file, this way the build time during development will be largely reduced, there is one catch though, this build won't assume any configuration changes.
-@include meta.load-css('../../../dist/koi-utilities.css');
+@include meta.load-css('../../../dist/umbra-utilities.css');
 
 // << Insert your utility classes here >>
