--- a/scss/api/_transition.scss
+++ b/scss/api/_transition.scss
@@ -39,15 +39,15 @@ $_default-properties: (
   $timing-function: $_default-timing-function,
   $delay: 0
 ) {
-  --koi-transition-delay: #{$delay};
-  --koi-transition-duration: #{duration($duration)};
-  --koi-transition-property: #{$property};
-  --koi-transition-timing-function: #{timing($timing-function)};
+  --um-transition-delay: #{$delay};
+  --um-transition-duration: #{duration($duration)};
+  --um-transition-property: #{$property};
+  --um-transition-timing-function: #{timing($timing-function)};
 
-  transition-delay: var(--koi-transition-delay);
-  transition-duration: var(--koi-transition-duration);
-  transition-property: var(--koi-transition-property);
-  transition-timing-function: var(--koi-transition-timing-function);
+  transition-delay: var(--um-transition-delay);
+  transition-duration: var(--um-transition-duration);
+  transition-property: var(--um-transition-property);
+  transition-timing-function: var(--um-transition-timing-function);
 }
 
 @mixin transition-all($duration: $_default-duration, $timing-function: $_default-timing-function, $delay: null) {
