--- a/scss/components/_alert.scss
+++ b/scss/components/_alert.scss
@@ -31,22 +31,22 @@ $icon-size: 20px;
 
 @mixin default {
   @include box(
-    $background: var(--koi-alert-background, fill(cnt, 0)),
-    $foreground: var(--koi-alert-foreground, fill(cnt, 7)),
+    $background: var(--um-alert-background, fill(cnt, 0)),
+    $foreground: var(--um-alert-foreground, fill(cnt, 7)),
     $rounded: $border-radius
   );
   @include transition((color background-color border-color transform));
 
-  border-color: var(--koi-alert-border-color, transparent);
-  border-width: var(--koi-alert-border-width, $border-width);
-  box-shadow: var(--koi-alert-shadow, none);
+  border-color: var(--um-alert-border-color, transparent);
+  border-width: var(--um-alert-border-width, $border-width);
+  box-shadow: var(--um-alert-shadow, none);
   display: flex;
-  font-size: var(--koi-alert-font-size, $font-size);
-  font-weight: var(--koi-alert-font-weight, $font-weight);
-  gap: var(--koi-alert-gap, $spacing-y);
+  font-size: var(--um-alert-font-size, $font-size);
+  font-weight: var(--um-alert-font-weight, $font-weight);
+  gap: var(--um-alert-gap, $spacing-y);
   justify-content: space-between;
-  line-height: var(--koi-alert-leading, $text-leading);
-  opacity: var(--koi-alert-opacity, 1);
+  line-height: var(--um-alert-leading, $text-leading);
+  opacity: var(--um-alert-opacity, 1);
   padding: $spacing-y $spacing-x;
   position: relative;
 
@@ -74,7 +74,7 @@ $icon-size: 20px;
   }
 
   &__header {
-    color: var(--koi-alert-header-foreground, fill(cnt, 9));
+    color: var(--um-alert-header-foreground, fill(cnt, 9));
     font-weight: font(bold);
     padding-right: calc(1.5 * $spacing-x);
   }
@@ -101,20 +101,20 @@ $icon-size: 20px;
   }
 
   @include dark-mode {
-    --koi-alert-background: #{fill(cnt, 2, $lightness: -10%)};
+    --um-alert-background: #{fill(cnt, 2, $lightness: -10%)};
   }
 
   @include color-variant(accent) {
-    --koi-alert-background: #{accent(0)};
-    --koi-alert-header-foreground: #{accent(6)};
+    --um-alert-background: #{accent(0)};
+    --um-alert-header-foreground: #{accent(6)};
 
     #{$class}__icon {
       color: accent(6);
     }
 
     @include dark-mode {
-      --koi-alert-background: #{accent(8, $alpha: 0.25, $lightness: -15%)};
-      --koi-alert-header-foreground: #{accent(5)};
+      --um-alert-background: #{accent(8, $alpha: 0.25, $lightness: -15%)};
+      --um-alert-header-foreground: #{accent(5)};
 
       #{$class}__icon {
         color: accent(5);
@@ -124,16 +124,16 @@ $icon-size: 20px;
 
   @each $color in config.$enabled-color-variants {
     @include color-variant($color) {
-      --koi-alert-background: #{fill($color, 0)};
-      --koi-alert-header-foreground: #{fill($color, 6)};
+      --um-alert-background: #{fill($color, 0)};
+      --um-alert-header-foreground: #{fill($color, 6)};
 
       #{$class}__icon {
         color: fill($color, 6);
       }
 
       @include dark-mode {
-        --koi-alert-background: #{fill($color, 8, $alpha: 0.25, $lightness: -15%)};
-        --koi-alert-header-foreground: #{fill($color, 5)};
+        --um-alert-background: #{fill($color, 8, $alpha: 0.25, $lightness: -15%)};
+        --um-alert-header-foreground: #{fill($color, 5)};
 
         #{$class}__icon {
           color: fill($color, 5);
@@ -152,28 +152,28 @@ $icon-size: 20px;
 }
 
 @mixin solid {
-  --koi-alert-background: #{fill(cnt, 9)};
-  --koi-alert-foreground: #{fill(cnt, 0)};
-  --koi-alert-header-foreground: #{fill(cnt, 0)};
+  --um-alert-background: #{fill(cnt, 9)};
+  --um-alert-foreground: #{fill(cnt, 0)};
+  --um-alert-header-foreground: #{fill(cnt, 0)};
 
   @include dark-mode {
-    --koi-alert-background: #{fill(cnt, 9)};
-    --koi-alert-foreground: #{fill(cnt, 0)};
-    --koi-alert-header-foreground: #{fill(cnt, 0)};
+    --um-alert-background: #{fill(cnt, 9)};
+    --um-alert-foreground: #{fill(cnt, 0)};
+    --um-alert-header-foreground: #{fill(cnt, 0)};
   }
 
   @include color-variant(accent) {
-    --koi-alert-background: #{accent(6)};
-    --koi-alert-header-foreground: #{fill(white)};
+    --um-alert-background: #{accent(6)};
+    --um-alert-header-foreground: #{fill(white)};
 
     #{$class}__icon {
       color: fill(white);
     }
 
     @include dark-mode {
-      --koi-alert-background: #{accent(6)};
-      --koi-alert-foreground: #{fill(white)};
-      --koi-alert-header-foreground: #{fill(white)};
+      --um-alert-background: #{accent(6)};
+      --um-alert-foreground: #{fill(white)};
+      --um-alert-header-foreground: #{fill(white)};
 
       #{$class}__icon {
         color: fill(white);
@@ -183,17 +183,17 @@ $icon-size: 20px;
 
   @each $color in config.$enabled-color-variants {
     @include color-variant($color) {
-      --koi-alert-background: #{fill($color, 6)};
-      --koi-alert-header-foreground: #{fill(white)};
+      --um-alert-background: #{fill($color, 6)};
+      --um-alert-header-foreground: #{fill(white)};
 
       #{$class}__icon {
         color: fill(white);
       }
 
       @include dark-mode {
-        --koi-alert-background: #{fill($color, 6)};
-        --koi-alert-foreground: #{fill(white)};
-        --koi-alert-header-foreground: #{fill(white)};
+        --um-alert-background: #{fill($color, 6)};
+        --um-alert-foreground: #{fill(white)};
+        --um-alert-header-foreground: #{fill(white)};
 
         #{$class}__icon {
           color: fill(white);
@@ -204,45 +204,45 @@ $icon-size: 20px;
 }
 
 @mixin outline {
-  --koi-alert-background: transparent;
-  --koi-alert-foreground: #{fill(cnt, 8)};
-  --koi-alert-header-foreground: #{fill(cnt, 8)};
-  --koi-alert-border-color: #{fill(cnt, 6)};
+  --um-alert-background: transparent;
+  --um-alert-foreground: #{fill(cnt, 8)};
+  --um-alert-header-foreground: #{fill(cnt, 8)};
+  --um-alert-border-color: #{fill(cnt, 6)};
 
   @include dark-mode {
-    --koi-alert-background: transparent;
+    --um-alert-background: transparent;
   }
 
   @include color-variant(accent) {
-    --koi-alert-background: transparent;
-    --koi-alert-header-foreground: #{accent(6)};
-    --koi-alert-border-color: #{accent(6)};
+    --um-alert-background: transparent;
+    --um-alert-header-foreground: #{accent(6)};
+    --um-alert-border-color: #{accent(6)};
 
     #{$class}__icon {
       color: accent(6);
     }
 
     @include dark-mode {
-      --koi-alert-background: transparent;
-      --koi-alert-header-foreground: #{accent(6)};
-      --koi-alert-border-color: #{accent(6)};
+      --um-alert-background: transparent;
+      --um-alert-header-foreground: #{accent(6)};
+      --um-alert-border-color: #{accent(6)};
     }
   }
 
   @each $color in config.$enabled-color-variants {
     @include color-variant($color) {
-      --koi-alert-background: transparent;
-      --koi-alert-header-foreground: #{fill($color, 6)};
-      --koi-alert-border-color: #{fill($color, 6)};
+      --um-alert-background: transparent;
+      --um-alert-header-foreground: #{fill($color, 6)};
+      --um-alert-border-color: #{fill($color, 6)};
 
       #{$class}__icon {
         color: fill($color, 6);
       }
 
       @include dark-mode {
-        --koi-alert-background: transparent;
-        --koi-alert-header-foreground: #{fill($color, 6)};
-        --koi-alert-border-color: #{fill($color, 6)};
+        --um-alert-background: transparent;
+        --um-alert-header-foreground: #{fill($color, 6)};
+        --um-alert-border-color: #{fill($color, 6)};
 
         #{$class}__icon {
           color: fill($color, 6);
