--- a/scss/utilities/_layout.scss
+++ b/scss/utilities/_layout.scss
@@ -122,39 +122,39 @@ $utilities: (
 
     @include create-responsive-utility(space-x-#{$key}) {
       & > :not([hidden]) ~ :not([hidden]) {
-        margin-right: calc($spacer-value * var(--koi-space-x-reverse, 0));
-        margin-left: calc($spacer-value * calc(1 - var(--koi-space-x-reverse, 0)));
+        margin-right: calc($spacer-value * var(--um-space-x-reverse, 0));
+        margin-left: calc($spacer-value * calc(1 - var(--um-space-x-reverse, 0)));
       }
     }
 
     @include create-responsive-utility(space-y-#{$key}) {
       & > :not([hidden]) ~ :not([hidden]) {
-        margin-top: calc($spacer-value * calc(1 - var(--koi-space-y-reverse, 0)));
-        margin-bottom: calc($spacer-value * var(--koi-space-y-reverse, 0));
+        margin-top: calc($spacer-value * calc(1 - var(--um-space-y-reverse, 0)));
+        margin-bottom: calc($spacer-value * var(--um-space-y-reverse, 0));
       }
     }
 
     @include create-responsive-utility(-space-x-#{$key}) {
       & > :not([hidden]) ~ :not([hidden]) {
-        margin-right: calc(-1 * $spacer-value * var(--koi-space-x-reverse, 0));
-        margin-left: calc(-1 * $spacer-value * calc(1 - var(--koi-space-x-reverse, 0)));
+        margin-right: calc(-1 * $spacer-value * var(--um-space-x-reverse, 0));
+        margin-left: calc(-1 * $spacer-value * calc(1 - var(--um-space-x-reverse, 0)));
       }
     }
 
     @include create-responsive-utility(-space-y-#{$key}) {
       & > :not([hidden]) ~ :not([hidden]) {
-        margin-top: calc(-1 * $spacer-value * calc(1 - var(--koi-space-y-reverse, 0)));
-        margin-bottom: calc(-1 * $spacer-value * var(--koi-space-y-reverse, 0));
+        margin-top: calc(-1 * $spacer-value * calc(1 - var(--um-space-y-reverse, 0)));
+        margin-bottom: calc(-1 * $spacer-value * var(--um-space-y-reverse, 0));
       }
     }
   }
 
   @include create-responsive-utility(space-x-reverse) {
-    --koi-space-x-reverse: 1;
+    --um-space-x-reverse: 1;
   }
 
   @include create-responsive-utility(space-y-reverse) {
-    --koi-space-y-reverse: 1;
+    --um-space-y-reverse: 1;
   }
 }
 
