--- a/scss/components/_range.scss
+++ b/scss/components/_range.scss
@@ -45,30 +45,30 @@ $thumb-shadow: shadow();
 }
 
 @mixin track {
-  background: var(--koi-track-color, fill(cnt, 9, $alpha: 0.1));
-  border-radius: var(--koi-track-radius, radius(xl));
-  height: var(--koi-track-height, calc($thumb-size / 2.5));
+  background: var(--um-track-color, fill(cnt, 9, $alpha: 0.1));
+  border-radius: var(--um-track-radius, radius(xl));
+  height: var(--um-track-height, calc($thumb-size / 2.5));
   width: 100%;
 }
 
 @mixin thumb {
-  $thumb-color: var(--koi-thumb-color, accent($accent-shade));
+  $thumb-color: var(--um-thumb-color, accent($accent-shade));
   $shadow: 0 0 0 99px $thumb-color inset, $thumb-shadow;
 
   @include transition((background-color border-color box-shadow));
   background-color: $thumb-color;
-  border-radius: var(--koi-thumb-radius, $thumb-radius);
-  box-shadow: var(--koi-thumb-shadow, $shadow);
-  height: var(--koi-thumb-size, $thumb-size);
+  border-radius: var(--um-thumb-radius, $thumb-radius);
+  box-shadow: var(--um-thumb-shadow, $shadow);
+  height: var(--um-thumb-size, $thumb-size);
   position: relative;
-  width: var(--koi-thumb-size, $thumb-size);
+  width: var(--um-thumb-size, $thumb-size);
 }
 
 @mixin input-range {
-  $thumb-color-hover: var(--koi-thumb-color-hover, accent($accent-shade - 2));
-  $thumb-color-focus: var(--koi-thumb-color-focus, accent($accent-shade - 2));
+  $thumb-color-hover: var(--um-thumb-color-hover, accent($accent-shade - 2));
+  $thumb-color-focus: var(--um-thumb-color-focus, accent($accent-shade - 2));
   $focus-ring: var(
-    --koi-thumb-focus-ring,
+    --um-thumb-focus-ring,
     ring(
       $width: calc($thumb-size / 3.25),
       $offset: 0px,
@@ -96,19 +96,19 @@ $thumb-shadow: shadow();
   }
 
   &:hover::-webkit-slider-thumb {
-    box-shadow: var(--koi-thumb-shadow-hover, $box-shadow-hover);
+    box-shadow: var(--um-thumb-shadow-hover, $box-shadow-hover);
   }
 
   &:focus::-webkit-slider-thumb {
-    box-shadow: var(--koi-thumb-shadow-focus, $box-shadow-focus);
+    box-shadow: var(--um-thumb-shadow-focus, $box-shadow-focus);
   }
 
   &:hover::-moz-range-thumb {
-    box-shadow: var(--koi-thumb-shadow-hover, $box-shadow-hover);
+    box-shadow: var(--um-thumb-shadow-hover, $box-shadow-hover);
   }
 
   &:focus::-moz-range-thumb {
-    box-shadow: var(--koi-thumb-shadow-focus, $box-shadow-focus);
+    box-shadow: var(--um-thumb-shadow-focus, $box-shadow-focus);
   }
 }
 
